Fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -74,16 +74,18 @@ body {
 
 
 
+
+
 .content {
     width: 100%;
     display: none;
     transition: 3s;
     font-size: 14px;
     background-color: var(--active-color);
-    padding: 15px;
 
 
-    text-align: left;
+
+    align-items: center;
     z-index: 100;
     border-top: 1px solid #adadad;
     border-top-style: dotted;
@@ -125,6 +127,11 @@ body {
 }
 
 
+.better_text {
+    text-align: left;
+    padding: 2%;
+}
+
 .long_card {
     box-shadow: 0 4px 8px 0 rgba(152, 116, 188, 0.2);
 
@@ -155,6 +162,21 @@ body {
     border-radius: 0;
     box-shadow: none;
     background-color: var(--active-color);
+
+
+    outline: none;
+    border: none;
+    font-size: 14px;
+
+    /*box-shadow: 0 4px 8px 0 rgba(152, 116, 188, 0.2);*/
+    transition: 0.3s;
+    margin: 10px, 0px, 0px, 0px;
+    border-radius: 5px;
+    text-align: center;
+    /*background-color: rgba(0, 143, 200, 0.14);*/
+
+    cursor: pointer;
+    width: inherit;
 }
 
 .long_card_e:hover {
@@ -243,6 +265,7 @@ body {
 .col_2 {
     position: absolute;
     margin-left: 42%;
+    margin-right: 1%;
     width: 55%;
     display: flex;
     flex-direction: column;
